// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingData in all North-America and Europe AWS Regions can query cross-region 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://ca-central-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-central-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-north-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-south-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-west-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://eu-west-3-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-east-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-east-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-west-1-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "key": "s3://us-west-2-boilingdata-demo/test.parquet",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 2`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 3`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 4`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 5`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 6`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 7`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 8`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 9`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 10`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`BoilingData in all North-America and Europe AWS Regions runs query succesfully in other regions too 11`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
]
`;

exports[`boilingdata with DuckDB run all meta queries 1`] = `
Array [
  Array [],
  Array [
    Object {
      "CreationDate": "2021-12-06T12:06:12.060Z",
      "Name": "boilingdata-demo",
    },
  ],
  Array [
    Object {
      "awsAccountId": "589434896614",
      "externalId": "OPL0DcV9pKiQg7/YXxiKQkwOmYQk7wj9FoBS4P7GNI8=",
    },
  ],
  Array [
    Object {
      "pragma": "s3AccessRoleArn='arn:aws:iam::123456789012:role/EXAMPLE';",
    },
  ],
  Array [
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo.parquet",
      "LastModified": "2022-06-18T10:14:03.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"f5d2e2bda78a61d9ed9a184ccf3beba2-58\\"",
      "Key": "demo2.parquet",
      "LastModified": "2022-06-18T10:14:24.000Z",
      "Size": 484530996,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"85669ad1c741265a227e6eafc53cac62-43\\"",
      "Key": "demo4.duckdb.zst",
      "LastModified": "2022-06-18T10:55:23.000Z",
      "Size": 359243721,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "\\"19c7dc463166dd08c931736ad9048a35\\"",
      "Key": "test.parquet",
      "LastModified": "2022-05-23T16:37:00.000Z",
      "Size": 2783,
      "StorageClass": "STANDARD",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "cc-demo",
      "Size": 0,
      "StorageClass": "",
    },
    Object {
      "ETag": "",
      "LastModified": "",
      "Name": "uploads",
      "Size": 0,
      "StorageClass": "",
    },
  ],
]
`;

exports[`boilingdata with DuckDB run multi-key query 1`] = `
Array [
  Object {
    "count": 28160000,
    "key": "s3://boilingdata-demo/demo.parquet",
  },
  Object {
    "count": 28160000,
    "key": "s3://boilingdata-demo/demo2.parquet",
  },
]
`;

exports[`boilingdata with DuckDB run single query 1`] = `
Array [
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556669808000,
    "tpep_pickup_datetime": 1556669690000,
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556671047000,
    "tpep_pickup_datetime": 1556670954000,
    "trip_distance": 1.5,
  },
]
`;

exports[`boilingdata with Glue Tables can do partition filter push down 1`] = `
Array [
  Object {
    "count": 370164,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00268-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 370164,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00268-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 370330,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00269-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 370330,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00269-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 370214,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=8/type=yellow/part-r-00270-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
]
`;

exports[`boilingdata with Glue Tables can read S3 Keys from Glue Table 1`] = `
Array [
  Object {
    "count": 372459,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00000-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 372459,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00000-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 372633,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00001-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
  Object {
    "count": 372633,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00001-90b05037-c70b-4bc7-978c-b53b496c4751.gz.parquet",
  },
  Object {
    "count": 372654,
    "s3key": "s3://isecurefi-serverless-analytics/NY-Pub/year=2009/month=1/type=yellow/part-r-00002-6e222bd6-47be-424a-a29a-606961a23de1.gz.parquet",
  },
]
`;

exports[`boilingdata with SQLite3 run single query 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
]
`;

exports[`boilingdata with SQLite3 run single query, same one, 2nd time 1`] = `
Array [
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": 1454486129000,
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": 1454519043000,
    "salary": 150280.17,
    "title": "Accountant IV",
  },
]
`;

exports[`boilingdata with promise method can run simple promise based query 1`] = `
Array [
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556669808000,
    "tpep_pickup_datetime": 1556669690000,
    "trip_distance": 0,
  },
  Object {
    "DOLocationID": 145,
    "PULocationID": 145,
    "RatecodeID": 1,
    "VendorID": 1,
    "congestion_surcharge": 0,
    "extra": 0.5,
    "fare_amount": 3,
    "improvement_surcharge": 0.3,
    "mta_tax": 0.5,
    "passenger_count": 1,
    "payment_type": 2,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 4.3,
    "tpep_dropoff_datetime": 1556671047000,
    "tpep_pickup_datetime": 1556670954000,
    "trip_distance": 1.5,
  },
]
`;
